{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 10,
  "lineage": "f7c5d8c9-c5a6-f68a-4b6c-d9ac174ef10d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancia1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:328477655322:instance/i-0b53fbc44d1ab379c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b53fbc44d1ab379c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-09f3e54d8e60de8dd"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f3e54d8e60de8dd",
            "private_dns": "ip-172-16-1-190.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-031db179498a2bc33",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc2ee2649a09d77a",
            "tags": {
              "Name": "Instancia_desde_Terraform"
            },
            "tags_all": {
              "Name": "Instancia_desde_Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a920ecd0e100ff5d"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_instancia",
            "aws_subnet.sub_net_us-east-1",
            "aws_vpc.vpc_ej1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328477655322:internet-gateway/igw-006f7e104765043b2",
            "id": "igw-006f7e104765043b2",
            "owner_id": "328477655322",
            "tags": {
              "Name": "internet_gw_tr"
            },
            "tags_all": {
              "Name": "internet_gw_tr"
            },
            "vpc_id": "vpc-0f59f87a71f9e6caa"
          },
          "dependencies": [
            "aws_vpc.vpc_ej1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic_instancia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328477655322:network-interface/eni-09f3e54d8e60de8dd",
            "id": "eni-09f3e54d8e60de8dd",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:f2:4a:76:4f:0b",
            "owner_id": "328477655322",
            "private_ip": "172.16.1.190",
            "private_ip_list": [
              "172.16.1.190"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.1.190"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a920ecd0e100ff5d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc2ee2649a09d77a",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.sub_net_us-east-1",
            "aws_vpc.vpc_ej1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tabla_rutas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328477655322:route-table/rtb-09ca1864588b3b713",
            "id": "rtb-09ca1864588b3b713",
            "owner_id": "328477655322",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006f7e104765043b2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tabla_rutas"
            },
            "tags_all": {
              "Name": "tabla_rutas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f59f87a71f9e6caa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_vpc.vpc_ej1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0265f2a79f624f16f",
            "route_table_id": "rtb-09ca1864588b3b713",
            "subnet_id": "subnet-0dc2ee2649a09d77a"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_route_table.tabla_rutas",
            "aws_subnet.sub_net_us-east-1",
            "aws_vpc.vpc_ej1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328477655322:security-group/sg-06a86ff8a3b63ae29",
            "description": "Allow 22 tcp inbound traffic",
            "egress": [],
            "id": "sg-06a86ff8a3b63ae29",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "22_tcp",
            "name_prefix": "",
            "owner_id": "328477655322",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f59f87a71f9e6caa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_ej1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_net_us-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328477655322:subnet/subnet-0dc2ee2649a09d77a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc2ee2649a09d77a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328477655322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_1"
            },
            "tags_all": {
              "Name": "subnet_1"
            },
            "vpc_id": "vpc-0f59f87a71f9e6caa"
          },
          "dependencies": [
            "aws_vpc.vpc_ej1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_ej1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328477655322:vpc/vpc-0f59f87a71f9e6caa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-05b1f2c41005e57bf",
            "default_route_table_id": "rtb-016559353e70c85e8",
            "default_security_group_id": "sg-0a920ecd0e100ff5d",
            "dhcp_options_id": "dopt-07c7dc462e1fc40ad",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f59f87a71f9e6caa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016559353e70c85e8",
            "owner_id": "328477655322"
          }
        }
      ]
    }
  ]
}